# NUEDC_2023_E_snippet

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  api.py  camCfg.py  color_range_selector.py  depth.ipynb  main.cpp  mapping.ipynb  origin_point.ipynb  pkt.py  pp.ipynb  protocol.py  rect.ipynb  requirements.txt  rotated.avi  run_motor.py  test.avi  video.py
midas/: README.md  run.py
mlsd/: README.md  utils.py
motor/: README.md  constant.py  mapper.py  motor.py  pkt.py  protocol.py  requirements.txt  utils.py
